# Python-Package-Test

./: .coveragerc  README.md  pyproject.toml  scripts.py
config/: __init__.py  configuration.py
tests/: test_configuration.py
