[tool.poetry]
name = "config"
version = "0.1.0"
description = "A simple Config object for managing configurations"
authors = ["Jordan Cottle <jordancottle622@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
PyYAML = "^5.4.1"
methodtools = "^0.4.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
